k8s/base/services/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1

  selector:
    matchLabels:
      app: gateway

  template:
    metadata:
      labels:
        app: gateway

    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: gateway
          image: ghcr.io/beartrando/tic-tac-toe-gateway/service

          ports:
            - containerPort: 9090
            - containerPort: 50051

          livenessProbe:
            exec:
              command:
                - wget
                - -q
                - --spider
                - http://127.0.0.1:50051
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5

          readinessProbe:
            exec:
              command:
                - wget
                - -q
                - --spider
                - http://127.0.0.1:50051
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
