k8s/base/services/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway

  ports:
    - name: http
      port: 9090
      targetPort: 9090

  type: ClusterIP
